--- a/mbv/tun2socks/Makefile
+++ b/mbv/tun2socks/Makefile
@@ -22,7 +22,7 @@ GO_PKG_BUILD_PKG:=$(GO_PKG)
 GO_PKG_LDFLAGS_X:=$(GO_PKG)/internal/version.Version=$(PKG_VERSION)
 
 include $(INCLUDE_DIR)/package.mk
-include ../../lang/golang/golang-package.mk
+include $(TOPDIR)/feeds/packages/lang/golang/golang-package.mk
 
 define Package/tun2socks
   TITLE:=powered by gVisor TCP/IP stack
