--- a/mbv/tun2socks/files/tun2socks.conf
+++ b/mbv/tun2socks/files/tun2socks.conf
@@ -4,6 +4,7 @@ config tun2socks 'main'
 	option interface 'tun0'
 	option proxy_host '127.0.0.1'
 	option proxy_port '1080'
-	option ip_address '10.0.0.2'
-	option subnet_address '10.0.0.1'
-	option netmask '255.255.255.252'
+	option ip_address '172.16.250.1'
+	option netmask '255.255.255.0'
+	option ip6addr 'fced:1111::10/64'
+	option ip6gw 'fced:1111::1'
